# cardano-multiplatform-lib

./: .gitignore  Cargo.toml  build-and-test.sh  flake.nix  package-lock.json  package.json  test.sh
chain/rust/: Cargo.toml
chain/rust/src/: address.rs  cbor_encodings.rs  deposit.rs  fees.rs  lib.rs  serialization.rs  utils.rs
chain/rust/src/assets/: mod.rs  utils.rs
chain/rust/src/auxdata/: cbor_encodings.rs  mod.rs  serialization.rs  utils.rs
chain/rust/src/block/: serialization.rs
chain/rust/src/builders/: certificate_builder.rs  input_builder.rs  mint_builder.rs  mod.rs  proposal_builder.rs  redeemer_builder.rs  tx_builder.rs  utils.rs  vote_builder.rs  withdrawal_builder.rs  witness_builder.rs
chain/rust/src/byron/: mod.rs
chain/rust/src/certs/: cbor_encodings.rs  mod.rs  serialization.rs
chain/rust/src/crypto/: hash.rs  serialization.rs
chain/rust/src/genesis/: mod.rs  network_info.rs
chain/rust/src/genesis/byron/: parse.rs
chain/rust/src/genesis/shelley/: config.rs  parse.rs  raw.rs
chain/rust/src/genesis/shelley/test_data/: test-yaci.json  test.json
chain/rust/src/governance/: cbor_encodings.rs  mod.rs  serialization.rs  utils.rs
chain/rust/src/json/: metadatums.rs  plutus_datums.rs
chain/rust/src/plutus/: cbor_encodings.rs  mod.rs  serialization.rs  utils.rs
chain/rust/src/transaction/: cbor_encodings.rs  mod.rs  serialization.rs  utils.rs
chain/wasm/: Cargo.toml
chain/wasm/json-gen/: Cargo.toml
chain/wasm/json-gen/src/: lib.rs
chain/wasm/src/: fees.rs  lib.rs  utils.rs
chain/wasm/src/assets/: mod.rs  utils.rs
chain/wasm/src/auxdata/: mod.rs
chain/wasm/src/block/: mod.rs
chain/wasm/src/builders/: certificate_builder.rs  input_builder.rs  mint_builder.rs  mod.rs  proposal_builder.rs  redeemer_builder.rs  tx_builder.rs  vote_builder.rs  withdrawal_builder.rs  witness_builder.rs
chain/wasm/src/byron/: mod.rs
chain/wasm/src/certs/: mod.rs
chain/wasm/src/crypto/: hash.rs  mod.rs
chain/wasm/src/governance/: mod.rs  utils.rs
chain/wasm/src/plutus/: mod.rs  utils.rs
chain/wasm/src/transaction/: mod.rs  utils.rs
cip25/rust/: Cargo.toml
cip25/rust/src/: utils.rs
cip25/wasm/: Cargo.toml
cip25/wasm/json-gen/: Cargo.toml
cip25/wasm/src/: lib.rs
cip36/rust/: Cargo.toml
cip36/wasm/: Cargo.toml
cip36/wasm/json-gen/: Cargo.toml
cip36/wasm/src/: lib.rs
cml/wasm/: Cargo.toml  package.json
core/rust/: Cargo.toml
core/rust/src/: serialization.rs
core/wasm/: Cargo.toml
core/wasm/src/: lib.rs  wasm_wrappers.rs
crypto/rust/: Cargo.toml
crypto/rust/src/: lib.rs
crypto/wasm/: Cargo.toml
crypto/wasm/src/: lib.rs
docs/docs/modules/: cbor.mdx
examples/wasm-browser/: package-lock.json
multi-era/rust/: Cargo.toml
multi-era/rust/src/: utils.rs
multi-era/rust/src/allegra/: mod.rs  serialization.rs  utils.rs
multi-era/rust/src/alonzo/: cbor_encodings.rs  mod.rs  serialization.rs  utils.rs
multi-era/rust/src/babbage/: cbor_encodings.rs  mod.rs  serialization.rs  utils.rs
multi-era/rust/src/shelley/: cbor_encodings.rs  mod.rs  serialization.rs  utils.rs
multi-era/wasm/: Cargo.toml  package.json
multi-era/wasm/json-gen/: Cargo.toml
multi-era/wasm/json-gen/src/: lib.rs
multi-era/wasm/src/: lib.rs  utils.rs
multi-era/wasm/src/allegra/: mod.rs
multi-era/wasm/src/alonzo/: mod.rs
multi-era/wasm/src/babbage/: mod.rs
multi-era/wasm/src/byron/: mod.rs
multi-era/wasm/src/byron/block/: mod.rs
multi-era/wasm/src/byron/delegation/: mod.rs
multi-era/wasm/src/byron/mpc/: mod.rs
multi-era/wasm/src/byron/transaction/: mod.rs
multi-era/wasm/src/byron/update/: mod.rs
multi-era/wasm/src/mary/: mod.rs
multi-era/wasm/src/shelley/: mod.rs
specs/conway/: assets.cddl  auxdata.cddl  certs.cddl  crypto.cddl  governance.cddl  lib.cddl  plutus.cddl  transaction.cddl
specs/multiera/_CDDL_CODEGEN_EXTERN_DEPS_DIR_/cml_chain/: auxdata.cddl  mod.cddl  plutus.cddl
specs/multiera/allegra/: mod.cddl
specs/multiera/alonzo/: mod.cddl
specs/multiera/babbage/: mod.cddl
specs/multiera/cml_chain/: certs.cddl
specs/multiera/shelley/: mod.cddl
tools/metadata-cddl-checker/: Cargo.toml
tools/plutus-datum-codegen/: Cargo.toml  README.md
tools/plutus-datum-codegen/prelude/: prelude.cddl
tools/plutus-datum-codegen/prelude/_CDDL_CODEGEN_EXTERN_DEPS_DIR_/cml_chain/: address.cddl  assets.cddl  auxdata.cddl  crypto.cddl  lib.cddl  plutus.cddl  transaction.cddl
tools/plutus-datum-codegen/src/: cli.rs  dep_graph.rs  main.rs  utils.rs
