[package]
name = "cml-core"
version = "6.0.0"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform SDK for core Cardano blockchain functionality"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor_event = "2.2.0"
linked-hash-map = "0.5.3"
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
schemars = "0.8.8"

bech32 = "0.7.2"
hex = "0.4.0"
itertools = "0.10.1"
getrandom = { version = "0.2.3", features = ["js"] }
rand = "0.8.5"
fraction = "0.10.0"
base64 = "0.13"
num-bigint = "0.4.0"
num-integer = "0.1.45"
#rand_os = "0.1"
thiserror = "1.0.37"
cfg-if = "1"


[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand_chacha = "0.3.1"
