[package]
name = "cml-crypto-wasm"
version = "6.0.0"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform WASM SDK for Cardano-related cryptographic functionality"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-core-wasm = { path = "../../core/wasm", version = "6.0.0" }
cml-crypto = { path = "../rust", version = "6.0.0" }
cbor_event = "2.2.0"
wasm-bindgen = { version = "0.2.87" }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
