[package]
name = "cml-multi-era"
version = "6.0.0"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform SDK for era-agnostic Cardano blockchain parsing"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
used_from_wasm = ["wasm-bindgen"]

[dependencies]
cml-core = { path = "../../core/rust", version = "6.0.0" }
cml-crypto = { path = "../../crypto/rust", version = "6.0.0" }
cml-chain = { path = "../../chain/rust", version = "6.0.0" }
cbor_event = "2.4.0"
linked-hash-map = "0.5.3"
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
schemars = "0.8.8"

# only for declaring hash types
bech32 = "0.7.2"
hex = "0.4.0"

# non-wasm
noop_proc_macro = { version = "0.3.0" }

# wasm
wasm-bindgen = { version = "0.2.87", optional = true }