[package]
name = "plutus-datum-codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cddl = "0.9.1"
cddl-codegen = { git = "https://github.com/dcSpark/cddl-codegen" }
clap = { version = "4.3.12", features = ["derive"] }
codegen = { git = "https://github.com/dcSpark/codegen", branch = "master" }